part1/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: logs-claim
      containers:
        - name: web-server
          image: haalto/web-server
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
